# roughdb

./: CLAUDE.md  COMPACTION_LOG.md  Cargo.toml  ENV_LOG.md  LICENSE  README.adoc  README.md  rust.yml
.github/workflows/: rust.yml
benches/: db.rs
examples/: cli.rs
src/: coding.rs  compaction_filter.rs  comparator.rs  env.rs  error.rs  iter.rs  lib.rs  options.rs  write_batch.rs
src/cache/: mod.rs
src/db/: compaction.rs  db_iter.rs  merge_iter.rs  mod.rs  table_cache.rs  version.rs  version_edit.rs  version_set.rs
src/filter/: bloom.rs  mod.rs
src/log/: format.rs  mod.rs  reader.rs  writer.rs
src/logfile/: mod.rs  reader.rs  writer.rs
src/memtable/: entry.rs  mod.rs  skiplist.rs
src/memtable/arena/: bump.rs  mod.rs
src/table/: block.rs  block_builder.rs  builder.rs  entry.rs  filter_block.rs  format.rs  memtable.rs  mod.rs  reader.rs  two_level_iterator.rs
