[package]
name = "roughdb"
description = "Embedded persistent key-value store — a LevelDB port to Rust with a compatible on-disk format"
license = "Apache-2.0"
version = "0.2.0"
edition = '2021'
repository = "https://github.com/wcgw/roughdb/"
authors = ["Alex Snaps <alex@wcgw.dev>"]

[dependencies]
bumpalo = "3.20.2"
crc32c = "0.6.8"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "db"
harness = false
