[package]
name = "roughdb"
description = "Embedded persistent key-value store — a LevelDB port to Rust with a compatible on-disk format"
license = "Apache-2.0"
version = "0.3.0"
edition = '2021'
repository = "https://github.com/wcgw/roughdb/"
authors = ["Alex Snaps <alex@wcgw.dev>"]
categories = ["database-implementations"]
keywords = ["database", "levelDB", "persistence"]

[dependencies]
bumpalo = "3.20.2"
crc32c = "0.6.8"
libc = "0.2"
snap = "1"
zstd = "0.13"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "db"
harness = false
